Fixing adding tests